syntax = "proto3";
package execution;
option go_package = "github.com/cube2222/octosql/output/batch";
import "execution/record.proto";

message RecordData {
    repeated execution.RecordID ids = 1;
    bool isUndo = 2;
    execution.Record record = 3;
}